# todo_mvc_rust_axum_htmx

./: Cargo.toml  README.md  flake.nix
src/: filter.rs  footer.rs  main.rs  state.rs  style.css  todos.rs
